--- a/tools/load-transfer/index.html
+++ b/tools/load-transfer/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fastened Joint Analysis Tool (US Units)</title>
+    <title>Fastened Joint Analysis Tool </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -232,55 +232,55 @@
         <!-- Sidebar -->
         <div class="w-96 bg-white shadow-xl flex flex-col h-full z-10">
             <div class="p-4 border-b border-gray-200 bg-gray-50"> <!-- Reduced padding -->
-                <h1 class="text-xl font-bold text-gray-800 leading-tight">Fastened Joint Analysis <span
-                        class="text-indigo-600 block text-sm font-normal mt-1">US Units</span></h1>
+                <h1 class="text-xl font-bold text-gray-800 leading-tight">Fastened Joint Analysis</h1>
             </div>
 
             <div class="flex-1 overflow-y-auto p-2 space-y-2 custom-scrollbar"> <!-- Reduced padding and spacing -->
 
                 <!-- Step 1: Setup -->
                 <div class="input-group">
-                    <h3 class="text-sm uppercase tracking-wider text-gray-500 font-bold mb-1">1. Model Setup</h3>
-                    <!-- Reduced mb -->
-                    <div class="space-y-2"> <!-- Reduced spacing -->
-                        <div class="grid grid-cols-2 gap-1"> <!-- Reduced gap -->
+                    <div class="flex justify-between items-center mb-1">
+                        <h3 class="text-xs uppercase tracking-widest text-gray-500 font-extrabold">1. Model Setup</h3>
+                        <button onclick="toggleSection('setup-content', this)"
+                            class="text-gray-400 hover:text-gray-600 transition-colors">
+                            <span class="toggle-icon transform rotate-180">▼</span>
+                        </button>
+                    </div>
+                    <div id="setup-content" class="space-y-2">
+                        <div class="grid grid-cols-2 gap-1">
                             <div>
                                 <label for="num-layers"
                                     class="block text-xs font-medium text-gray-700 mb-0.5">Layers</label>
-                                <!-- Reduced mb -->
                                 <input type="number" id="num-layers" value="3" min="2" class="input-field">
                             </div>
                             <div>
                                 <label for="num-fasteners"
                                     class="block text-xs font-medium text-gray-700 mb-0.5">Fasteners</label>
-                                <!-- Reduced mb -->
                                 <input type="number" id="num-fasteners" value="5" min="1" class="input-field">
                             </div>
                         </div>
                         <div>
                             <label for="layer-length" class="block text-xs font-medium text-gray-700 mb-0.5">Segment
-                                Length (in)</label> <!-- Reduced mb -->
-                            <input type="number" id="layer-length" value="4.0" min="0.01" step="0.1"
+                                Length (in)</label>
+                            <input type="number" id="layer-length" value="1.0" min="0.01" step="0.1"
                                 class="input-field">
                         </div>
                         <button id="generate-btn" class="btn-primary w-full text-sm">Generate Model</button>
-                        <!-- Removed py-1.5 as it's in CSS now -->
                     </div>
                 </div>
 
-                <hr class="border-gray-200">
-
                 <!-- Step 2: Customize -->
                 <div class="input-group">
-                    <div class="flex justify-between items-center mb-1"> <!-- Reduced mb -->
-                        <h3 class="text-sm uppercase tracking-wider text-gray-500 font-bold">2. Properties</h3>
+                    <hr class="border-gray-200 mb-2">
+                    <div class="flex justify-between items-center mb-1">
+                        <h3 class="text-xs uppercase tracking-widest text-gray-500 font-extrabold">2. Properties</h3>
                         <button onclick="toggleSection('properties-content', this)"
                             class="text-gray-400 hover:text-gray-600 transition-colors">
-                            <span class="toggle-icon transform rotate-180">▼</span>
+                            <span class="toggle-icon transform">▼</span>
                         </button>
                     </div>
 
-                    <div id="properties-content" class="space-y-2"> <!-- Reduced spacing -->
+                    <div id="properties-content" class="space-y-2 hidden"> <!-- Reduced spacing -->
                         <!-- Tabs for Global vs Element -->
                         <div class="flex border-b border-gray-200 mb-2"> <!-- Reduced mb -->
                             <button
@@ -289,8 +289,8 @@
                         </div>
 
                         <!-- Global Layer Props -->
-                        <div class="bg-gray-50 p-1.5 rounded-md border border-gray-200"> <!-- Reduced padding -->
-                            <h4 class="text-xs font-semibold text-gray-700 mb-1 uppercase">Layers</h4>
+                        <div class="bg-indigo-50 p-1.5 rounded-md border border-blue-200"> <!-- Reduced padding -->
+                            <h4 class="text-xs font-semibold text-indigo-700 mb-1 uppercase">Layers</h4>
                             <!-- Reduced mb -->
                             <div class="space-y-1"> <!-- Reduced spacing -->
                                 <select id="global-layer-material" class="input-field text-sm"></select>
@@ -304,7 +304,7 @@
                                     <div>
                                         <label class="text-xs text-gray-500 mb-0.5 block">Thick (in)</label>
                                         <!-- Added block and mb -->
-                                        <input type="number" id="global-layer-thickness" value="0.2" min="0.01"
+                                        <input type="number" id="global-layer-thickness" value="0.063" min="0.01"
                                             step="0.01" class="input-field text-sm">
                                     </div>
                                 </div>
@@ -314,16 +314,34 @@
                         </div>
 
                         <!-- Global Fastener Props -->
-                        <div class="bg-gray-50 p-1.5 rounded-md border border-gray-200"> <!-- Reduced padding -->
-                            <h4 class="text-xs font-semibold text-gray-700 mb-1 uppercase">Fasteners</h4>
+                        <div class="bg-indigo-50 p-1.5 rounded-md border border-indigo-200"> <!-- Reduced padding -->
+                            <h4 class="text-xs font-semibold text-indigo-700 mb-1 uppercase">Fasteners</h4>
                             <!-- Reduced mb -->
                             <div class="space-y-1"> <!-- Reduced spacing -->
                                 <select id="global-fastener-material" class="input-field text-sm"></select>
                                 <div>
                                     <label class="text-xs text-gray-500 mb-0.5 block">Diameter (in)</label>
                                     <!-- Added block and mb -->
-                                    <input type="number" id="global-fastener-diameter" value="0.25" min="0.01"
+                                    <input type="number" id="global-fastener-diameter" value="0.19" min="0.01"
                                         step="0.01" class="input-field text-sm">
+                                </div>
+                                <div class="bg-white p-1.5 rounded-md border border-indigo-100">
+                                    <label class="text-xs font-semibold text-indigo-700 mb-1 block uppercase">Modeling
+                                        Mode</label>
+                                    <div class="flex bg-gray-200 rounded p-0.5">
+                                        <label class="flex-1 text-center cursor-pointer">
+                                            <input type="radio" name="fastenerModelingMode" value="beam" checked
+                                                class="hidden peer">
+                                            <span
+                                                class="block text-[10px] font-medium py-0.5 rounded text-gray-500 peer-checked:bg-white peer-checked:text-indigo-600 peer-checked:shadow-sm transition-all uppercase">Beams</span>
+                                        </label>
+                                        <label class="flex-1 text-center cursor-pointer">
+                                            <input type="radio" name="fastenerModelingMode" value="spring"
+                                                class="hidden peer">
+                                            <span
+                                                class="block text-[10px] font-medium py-0.5 rounded text-gray-500 peer-checked:bg-white peer-checked:text-indigo-600 peer-checked:shadow-sm transition-all uppercase">Springs</span>
+                                        </label>
+                                    </div>
                                 </div>
                                 <button id="apply-global-fastener-props-btn" class="btn-secondary w-full text-xs">Apply
                                     to All Fasteners</button> <!-- Removed py-1 -->
@@ -331,8 +349,8 @@
                         </div>
 
                         <!-- Layer Rename -->
-                        <div class="bg-gray-50 p-1.5 rounded-md border border-gray-200"> <!-- Reduced padding -->
-                            <h4 class="text-xs font-semibold text-gray-700 mb-1 uppercase">Rename Layer</h4>
+                        <div class="bg-slate-50 p-1.5 rounded-md border border-slate-200"> <!-- Reduced padding -->
+                            <h4 class="text-xs font-semibold text-slate-700 mb-1 uppercase">Rename Layer</h4>
                             <!-- Reduced mb -->
                             <div class="space-y-1"> <!-- Reduced spacing -->
                                 <select id="rename-layer-select" class="input-field text-sm"></select>
@@ -360,22 +378,21 @@
                     </div>
                 </div>
 
-                <hr class="border-gray-200">
-
                 <!-- Step 3: BCs & Loads -->
                 <div class="input-group">
-                    <div class="flex justify-between items-center mb-1"> <!-- Reduced mb -->
-                        <h3 class="text-sm uppercase tracking-wider text-gray-500 font-bold">3. Loads & BCs</h3>
+                    <hr class="border-gray-200 mb-2">
+                    <div class="flex justify-between items-center mb-1">
+                        <h3 class="text-xs uppercase tracking-widest text-gray-500 font-extrabold">3. Loads & BCs</h3>
                         <button onclick="toggleSection('bcs-content', this)"
                             class="text-gray-400 hover:text-gray-600 transition-colors">
-                            <span class="toggle-icon transform rotate-180">▼</span>
+                            <span class="toggle-icon transform">▼</span>
                         </button>
                     </div>
 
-                    <div id="bcs-content" class="space-y-2"> <!-- Reduced spacing -->
+                    <div id="bcs-content" class="space-y-2 hidden"> <!-- Reduced spacing -->
                         <!-- Left Edge BC -->
-                        <div class="bg-gray-50 p-1.5 rounded-md border border-gray-200"> <!-- Reduced padding -->
-                            <h4 class="text-xs font-semibold text-gray-700 mb-1">Left Edge (Fix)</h4>
+                        <div class="bg-orange-50 p-1.5 rounded-md border border-amber-200"> <!-- Reduced padding -->
+                            <h4 class="text-xs font-semibold text-orange-700 mb-1 uppercase">Left Edge (Fix)</h4>
                             <!-- Reduced mb -->
                             <select id="bc-layer-select" class="input-field text-sm mb-1"></select> <!-- Reduced mb -->
                             <div class="flex space-x-2">
@@ -388,8 +405,8 @@
                         </div>
 
                         <!-- Right Edge Load/Disp -->
-                        <div class="bg-gray-50 p-1.5 rounded-md border border-gray-200"> <!-- Reduced padding -->
-                            <h4 class="text-xs font-semibold text-gray-700 mb-1">Right Edge Condition</h4>
+                        <div class="bg-orange-50 p-1.5 rounded-md border border-orange-200"> <!-- Reduced padding -->
+                            <h4 class="text-xs font-semibold text-orange-700 mb-1 uppercase">Right Edge Condition</h4>
                             <!-- Reduced mb -->
 
                             <!-- Toggle Type -->
@@ -451,10 +468,10 @@
                     </div>
                 </div>
 
-                <div class="pt-2 pb-4"> <!-- Reduced padding -->
+                <div class="mt-2">
                     <button id="solve-btn"
-                        class="btn-primary w-full py-2 text-lg shadow-lg transform hover:-translate-y-0.5 transition-all">Solve
-                        Analysis</button> <!-- Reduced py -->
+                        class="btn-primary w-full py-2.5 text-base font-bold shadow-lg transform hover:-translate-y-0.5 transition-all">Solve
+                        Analysis</button>
                 </div>
             </div>
         </div>
