Add DTA-checklist tool and update top-level webpage link

--- a/index.html
+++ b/index.html
@@ -151,6 +151,18 @@
             </div>
 
             <div class="bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center justify-between">
+                <a href="tools/DTA-checklist/DTA-checklist.html">
+                    <img src="assets/images/dta-checklist.png" alt="DT Analysis Checklist"
+                        class="w-full h-32 object-cover rounded-md mb-4">
+                </a>
+                <div>
+                    <h2 class="text-xl font-semibold mb-2 text-gray-900">DT Analysis Checklist</h2>
+                    <p class="text-gray-600 text-sm mb-4">A checklist tool for Damage Tolerance analysis compliance,
+                        following F&DT Mini Manual standards.</p>
+                </div>
+            </div>
+
+            <div class="bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center justify-between">
                 <a href="tools/beam-bending/index.html">
                     <img src="assets/images/beam-bending.png" alt="Beam Bending Analysis"
                         class="w-full h-32 object-cover rounded-md mb-4">
