Update load-transfer tool, add documentation, and clean up manual

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div>
                     <h2 class="text-xl font-semibold mb-2 text-gray-900">DT Analysis Checklist</h2>
                     <p class="text-gray-600 text-sm mb-4">A checklist tool for Damage Tolerance analysis compliance,
-                        following F&DT Mini Manual standards.</p>
+                        following F&DT Manual standards.</p>
                 </div>
             </div>
 
