--- a/tools/stress-transform/stress-transform.html
+++ b/tools/stress-transform/stress-transform.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCT-006 Stress Transformation Toolbox</title>
+    <title>Stress Transformation Tool</title>
     <link rel="icon" type="image/png" href="icon.png">
     <style>
         :root {
