Add stress-transform tool to main landing page

--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
             </div>
 
             <div class="bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center justify-between">
-                <a href="tools/beam-bending/index.html">
-                    <img src="assets/images/beam-bending.png" alt="Beam Bending Analysis"
+                <a href="tools/stress-transform/stress-transform.html">
+                    <img src="assets/images/stress-transform.png" alt="Stress Transformation Tool"
                         class="w-full h-32 object-cover rounded-md mb-4">
                 </a>
                 <div>
-                    <h2 class="text-xl font-semibold mb-2 text-gray-900">Beam Bending Analysis</h2>
-                    <p class="text-gray-600 text-sm mb-4">Generic beam analysis tool for statically determinate systems.
-                    </p>
+                    <h2 class="text-xl font-semibold mb-2 text-gray-900">Stress Transformation</h2>
+                    <p class="text-gray-600 text-sm mb-4">Calculate 2D stress transformation and 3D principal stresses
+                        with Mohr's circle visualization.</p>
                 </div>
             </div>
 
