Restore beam-bending tool to landing page with updated description

--- a/index.html
+++ b/index.html
@@ -127,6 +127,18 @@
             </div>
 
             <div class="bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center justify-between">
+                <a href="tools/beam-bending/index.html">
+                    <img src="assets/images/beam-bending.png" alt="Beam Bending Tool"
+                        class="w-full h-32 object-cover rounded-md mb-4">
+                </a>
+                <div>
+                    <h2 class="text-xl font-semibold mb-2 text-gray-900">Beam Bending</h2>
+                    <p class="text-gray-600 text-sm mb-4">Euler beam bending analysis with various support and load
+                        conditions.</p>
+                </div>
+            </div>
+
+            <div class="bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center justify-between">
                 <a href="tools/secondary-bending/index.html">
                     <img src="assets/images/tool8.png" alt="Image for Tool Eight"
                         class="w-full h-32 object-cover rounded-md mb-4">
