Add Crack Growth Analysis tool and update index to link to it.

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                 </a>
                 <div>
                     <h2 class="text-xl font-semibold mb-2 text-gray-900">Image Measurement</h2>
-                    <p class="text-gray-600 text-sm mb-4">Extract values from a 2D plot image, where each axis may be
-                        either linear or log scale, e.g. DTR form.</p>
+                    <p class="text-gray-600 text-sm mb-4">Measure details in an image.</p>
                 </div>
             </div>
 
@@ -183,6 +182,18 @@
                     <h2 class="text-xl font-semibold mb-2 text-gray-900">Stress Transformation</h2>
                     <p class="text-gray-600 text-sm mb-4">Calculate 2D stress transformation and 3D principal stresses
                         with Mohr's circle visualization.</p>
+                </div>
+            </div>
+
+            <div class="bg-white p-6 rounded-lg shadow-md text-center flex flex-col items-center justify-between">
+                <a href="tools/crack-growth-analysis/index.html">
+                    <img src="assets/images/sct-cga.png" alt="Crack Growth Analysis"
+                        class="w-full h-32 object-cover rounded-md mb-4">
+                </a>
+                <div>
+                    <h2 class="text-xl font-semibold mb-2 text-gray-900">Crack Growth Analysis</h2>
+                    <p class="text-gray-600 text-sm mb-4">Fatigue crack growth analysis tool using the NASGRO equation.
+                    </p>
                 </div>
             </div>
 
