feat: Add PZC toggle and resolve TC23 PZC/LEFM discrepancies

--- a/tools/crack-growth-analysis/index.html
+++ b/tools/crack-growth-analysis/index.html
@@ -200,6 +200,10 @@
                         <label>Max Cycles</label>
                         <input type="text" id="max-cycles" value="1e7">
                     </div>
+                    <div class="input-group checkbox-group">
+                        <input type="checkbox" id="use-pzc" checked>
+                        <label for="use-pzc">Irwin Plastic Zone Correction (PZC)</label>
+                    </div>
                 </div>
             </div>
 
