--- a/tools/stress-transform/stress-transform.html
+++ b/tools/stress-transform/stress-transform.html
@@ -25,16 +25,17 @@
             background-color: var(--bg-color);
             color: var(--text-color);
             margin: 0;
-            padding: 20px;
+            padding: 0.5rem;
             display: flex;
             justify-content: center;
+            font-size: 14px;
         }
 
         .app-container {
             width: 100%;
             max-width: 950px;
             background-color: var(--card-bg-color);
-            padding: 30px;
+            padding: 15px;
             border-radius: 8px;
             box-shadow: var(--box-shadow);
             border: 1px solid var(--border-color);
@@ -42,37 +43,45 @@
 
         h1 {
             text-align: center;
-            font-size: 1.6em;
+            font-size: 1.4em;
             margin-top: 0;
-            margin-bottom: 20px;
+            margin-bottom: 12px;
             color: var(--primary-color);
+        }
+
+        h3 {
+            font-size: 0.95em;
+            margin: 0 0 6px 0;
+            color: var(--text-color);
         }
 
         .tab-buttons {
             display: flex;
-            gap: 10px;
-            margin-bottom: 20px;
+            gap: 8px;
+            margin-bottom: 12px;
         }
 
         .tab-btn {
             flex: 1;
-            padding: 15px;
-            font-size: 1.1em;
-            border: none;
-            border-radius: 8px;
+            padding: 7px 10px;
+            font-size: 0.9em;
+            border: 1px solid #bbb;
+            border-radius: 4px;
             cursor: pointer;
-            background: #ddd;
-            transition: 0.3s;
+            background: #e7e7e7;
+            transition: 0.2s;
+            font-family: var(--font-family);
         }
 
         .tab-btn.active {
             background: var(--primary-color);
             color: white;
+            border-color: #0056b3;
         }
 
         .panel {
             display: none;
-            animation: fadeIn 0.4s;
+            animation: fadeIn 0.3s;
         }
 
         .panel.active {
@@ -81,9 +90,9 @@
 
         .input-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 15px;
-            margin-bottom: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 8px;
+            margin-bottom: 10px;
         }
 
         .input-group {
@@ -92,28 +101,32 @@
         }
 
         label {
-            font-size: 0.9em;
+            font-size: 1.1em;
             font-weight: bold;
-            margin-bottom: 5px;
+            margin-bottom: 3px;
         }
 
-        input {
-            padding: 8px;
+        input[type="number"] {
+            padding: 4px;
             border: 1px solid #ccc;
             border-radius: 4px;
+            box-sizing: border-box;
+            width: 100%;
+            text-align: center;
         }
 
         button.calc-btn {
             width: 100%;
-            padding: 12px;
+            padding: 7px;
             background: var(--orange-btn);
             color: white;
             border: 1px solid #e08e51;
-            border-radius: 6px;
-            font-size: 1.1em;
+            border-radius: 4px;
+            font-size: 0.9em;
             font-weight: bold;
             cursor: pointer;
             transition: 0.2s;
+            font-family: var(--font-family);
         }
 
         button.calc-btn:hover {
@@ -123,23 +136,46 @@
         .output-area {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
-            margin-top: 25px;
+            gap: 12px;
+            margin-top: 12px;
         }
 
         .results-box {
             flex: 1;
-            min-width: 250px;
-            padding: 20px;
+            min-width: 220px;
+            padding: 10px 12px;
             background: var(--result-bg);
-            border-radius: 8px;
-            border: 1px solid var(--border-color);
+            border-radius: 6px;
+            border: 1px solid #b0c9a0;
+        }
+
+        /* Compact label/value grid inside results */
+        .results-grid {
+            display: grid;
+            grid-template-columns: auto 1fr;
+            gap: 3px 10px;
+            align-items: center;
+        }
+
+        .results-grid .res-label {
+            font-weight: bold;
+            text-align: right;
+            white-space: nowrap;
+            font-size: 0.9em;
+        }
+
+        .results-grid .res-value {
+            font-family: monospace;
+            font-size: 0.9em;
+            background: rgba(255, 255, 255, 0.55);
+            border-radius: 3px;
+            padding: 2px 5px;
         }
 
         canvas {
             background: #fff;
             border: 1px solid #eee;
-            border-radius: 8px;
+            border-radius: 6px;
             max-width: 100%;
             width: 100%;
             height: auto;
@@ -148,21 +184,23 @@
         .canvas-container {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 12px;
             width: 100%;
         }
 
         .canvas-item {
             flex: 1;
-            min-width: 300px;
+            min-width: 260px;
             display: flex;
             flex-direction: column;
         }
 
         .canvas-item label {
             text-align: center;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             color: #666;
+            font-size: 0.85em;
+            font-weight: normal;
         }
 
         @keyframes fadeIn {
@@ -191,7 +229,9 @@
                 <div class="input-group"><label>σx</label><input type="number" id="sx2" value="80"></div>
                 <div class="input-group"><label>σy</label><input type="number" id="sy2" value="20"></div>
                 <div class="input-group"><label>τxy</label><input type="number" id="txy2" value="40"></div>
-                <div class="input-group"><label>Angle θ (°)</label><input type="number" id="thetaInput" value="30">
+                <div class="input-group"><label
+                        title="Stress components will be reported for an element rotated by this angle counterclockwise">Angle
+                        θ (°) ⓘ</label><input type="number" id="thetaInput" value="30">
                 </div>
             </div>
             <button class="calc-btn" onclick="solve2D()">Calculate Stress State</button>
@@ -264,20 +304,24 @@
             const svm = Math.sqrt(Math.pow(sx, 2) - sx * sy + Math.pow(sy, 2) + 3 * Math.pow(txy, 2));
 
             document.getElementById('res2D').innerHTML = `
-                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
                     <div>
                         <h3>Principal Stresses</h3>
-                        <p><strong>σ₁:</strong> ${s1.toFixed(2)}</p>
-                        <p><strong>σ₂:</strong> ${s2.toFixed(2)}</p>
-                        <p><strong>τ_max:</strong> ${R.toFixed(2)}</p>
-                        <p><strong>θₚ:</strong> ${thetaP.toFixed(2)}°</p>
-                        <p><strong>σ_vm:</strong> ${svm.toFixed(2)}</p>
+                        <div class="results-grid">
+                            <span class="res-label">σ₁ =</span><span class="res-value">${s1.toFixed(3)}</span>
+                            <span class="res-label">σ₂ =</span><span class="res-value">${s2.toFixed(3)}</span>
+                            <span class="res-label">τ_max =</span><span class="res-value">${R.toFixed(3)}</span>
+                            <span class="res-label">θₚ =</span><span class="res-value">${thetaP.toFixed(2)}°</span>
+                            <span class="res-label">σ_vm =</span><span class="res-value">${svm.toFixed(3)}</span>
+                        </div>
                     </div>
                     <div>
                         <h3>At θ = ${thetaDeg}°</h3>
-                        <p><strong>σ_x':</strong> ${sxTheta.toFixed(2)}</p>
-                        <p><strong>σ_y':</strong> ${syTheta.toFixed(2)}</p>
-                        <p><strong>τ_x'y':</strong> ${txyTheta.toFixed(2)}</p>
+                        <div class="results-grid">
+                            <span class="res-label">σ_x' =</span><span class="res-value">${sxTheta.toFixed(3)}</span>
+                            <span class="res-label">σ_y' =</span><span class="res-value">${syTheta.toFixed(3)}</span>
+                            <span class="res-label">τ_x'y' =</span><span class="res-value">${txyTheta.toFixed(3)}</span>
+                        </div>
                     </div>
                 </div>
             `;
@@ -449,17 +493,21 @@
             const svm3D = Math.sqrt(0.5 * (Math.pow(sorted[0] - sorted[1], 2) + Math.pow(sorted[1] - sorted[2], 2) + Math.pow(sorted[2] - sorted[0], 2)));
 
             document.getElementById('res3D').innerHTML = `
-                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
                     <div>
                         <h3>Principal Stresses</h3>
-                        <p><strong>σ₁:</strong> ${sorted[0].toFixed(2)}</p>
-                        <p><strong>σ₂:</strong> ${sorted[1].toFixed(2)}</p>
-                        <p><strong>σ₃:</strong> ${sorted[2].toFixed(2)}</p>
+                        <div class="results-grid">
+                            <span class="res-label">σ₁ =</span><span class="res-value">${sorted[0].toFixed(3)}</span>
+                            <span class="res-label">σ₂ =</span><span class="res-value">${sorted[1].toFixed(3)}</span>
+                            <span class="res-label">σ₃ =</span><span class="res-value">${sorted[2].toFixed(3)}</span>
+                        </div>
                     </div>
                     <div>
                         <h3>Analysis</h3>
-                        <p><strong>Max Shear (Abs):</strong> ${((sorted[0] - sorted[2]) / 2).toFixed(2)}</p>
-                        <p><strong>Von Mises:</strong> ${svm3D.toFixed(2)}</p>
+                        <div class="results-grid">
+                            <span class="res-label">τ_max =</span><span class="res-value">${((sorted[0] - sorted[2]) / 2).toFixed(3)}</span>
+                            <span class="res-label">σ_vm =</span><span class="res-value">${svm3D.toFixed(3)}</span>
+                        </div>
                     </div>
                 </div>
             `;
